{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player Controls",
            "id": "f1937f31-11c8-45a0-87ec-9584a40bdd7e",
            "actions": [
                {
                    "name": "Movement",
                    "type": "PassThrough",
                    "id": "02cca3e0-189d-48f7-a888-71c32d893ade",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "CameraMovement",
                    "type": "Value",
                    "id": "6b920591-bf66-4e9e-9d6e-84f5252587b9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "GeneralAttack",
                    "type": "Button",
                    "id": "b55a6703-d3b6-42fd-a70d-d29d0cfc8182",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "PowerAttack",
                    "type": "Button",
                    "id": "0707ed66-10f7-47e5-b226-26975d462056",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "LockOn",
                    "type": "Button",
                    "id": "36b7aeca-7835-4c8c-ac48-a7ccac9c0f47",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "1ab9048e-aa01-4c64-8af9-355406cb7ece",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "26d5a1d5-a5a9-4018-9ba1-bd565334f020",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "bb4c6130-4bfd-4420-b627-805094e837dd",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e92066b8-74b9-4117-8e60-14fa3abb8dae",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "c56b564b-0c58-411b-82ed-9a6298011b16",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "9a565693-e379-4ed3-a08e-5d64c8237a13",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "289d56ad-b374-4b71-85ed-510f9c420cef",
                    "path": "<XInputController>/leftStick",
                    "interactions": "",
                    "processors": "NormalizeVector2,ScaleVector2",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9feec3f4-8b20-46b1-a2d8-3d027cab1e6a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "14531a51-3ebb-4e1c-a912-81e1aa2fd95f",
                    "path": "<XInputController>/rightStick",
                    "interactions": "",
                    "processors": "ScaleVector2(x=50,y=50)",
                    "groups": "",
                    "action": "CameraMovement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a299a45-e518-4dfc-8775-bf1d957853a6",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "GeneralAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76d1e7b6-22f7-44c6-81a3-ca2208917eb1",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "GeneralAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "747cff72-151a-4729-a5b8-7c5beb8d2aa8",
                    "path": "<Mouse>/leftButton",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "PowerAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c4934cc1-ca1d-46a0-8f4a-6282c5971c69",
                    "path": "<XInputController>/rightShoulder",
                    "interactions": "Hold",
                    "processors": "",
                    "groups": "",
                    "action": "PowerAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "7ed8ab84-8432-46b9-93f4-43551bd2f5d1",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d9e89d84-0593-4f87-ab41-a958a343ffac",
                    "path": "<XInputController>/leftTrigger",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LockOn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e5159776-f379-44b0-9b9a-ffcd81d6f9f3",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "265dc0c9-fbe1-4f58-91df-33ba8fb99c37",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}